--- a/CrossPlatform/CrossPlatform/CrossPlatform.csproj
+++ b/CrossPlatform/CrossPlatform/CrossPlatform.csproj
@@ -46,14 +46,19 @@
     <Compile Include="GameTop\Interfaces\IClickable.cs" />
     <Compile Include="GameTop\Interfaces\IHoverable.cs" />
     <Compile Include="GameTop\Screens\ArmyScreen.cs" />
+    <Compile Include="GameTop\Screens\BattleScreen.cs" />
+    <Compile Include="GameTop\Screens\SettingScreen.cs" />
     <Compile Include="GameTop\Screens\MapScreen.cs" />
     <Compile Include="GameTop\Screens\MainScreen.cs" />
     <Compile Include="GameTop\Interfaces\IMovable.cs" />
     <Compile Include="GameTop\Renderer.cs" />
     <Compile Include="GameTop\Interfaces\IRenderable.cs" />
     <Compile Include="GameTop\Screens\Screen.cs" />
-    <Compile Include="GameTop\GameController.cs" />
+    <Compile Include="GameTop\ScreenController.cs" />
     <Compile Include="GameTop\UI\Button.cs" />
+    <Compile Include="GameTop\UI\RenderableTile.cs" />
+    <Compile Include="GameTop\UI\UIText.cs" />
+    <Compile Include="GameTop\UI\HoverableTile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
