--- a/CrossPlatform/CrossPlatform/CrossPlatform.csproj
+++ b/CrossPlatform/CrossPlatform/CrossPlatform.csproj
@@ -14,6 +14,21 @@
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
@@ -43,9 +58,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
+    <Compile Include="GameTop\ArmyInfo\Army.cs" />
+    <Compile Include="GameTop\ArmyInfo\Unit.cs" />
+    <Compile Include="GameTop\ArmyInfo\Squad.cs" />
     <Compile Include="GameTop\BattleLogic\Battle.cs" />
+    <Compile Include="GameTop\BattleLogic\BattlePuppet.cs" />
     <Compile Include="GameTop\Interfaces\IClickable.cs" />
     <Compile Include="GameTop\Interfaces\IHoverable.cs" />
+    <Compile Include="GameTop\PlayerInfo\PlayerInfo.cs" />
     <Compile Include="GameTop\Screens\ArmyScreen.cs" />
     <Compile Include="GameTop\Screens\BattleScreen.cs" />
     <Compile Include="GameTop\Screens\SettingScreen.cs" />
@@ -123,6 +143,13 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="app.manifest" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
