--- a/CrossPlatform/CrossPlatform/CrossPlatform.csproj
+++ b/CrossPlatform/CrossPlatform/CrossPlatform.csproj
@@ -77,6 +77,9 @@
     <Compile Include="GameTop\Screens\Screen.cs" />
     <Compile Include="GameTop\ScreenController.cs" />
     <Compile Include="GameTop\Tiles\BattleTile.cs" />
+    <Compile Include="GameTop\Tiles\BasicTile.cs" />
+    <Compile Include="GameTop\Tiles\UnitSelectorTile.cs" />
+    <Compile Include="GameTop\Tiles\SquadFormationTile.cs" />
     <Compile Include="GameTop\UIElements\Button.cs" />
     <Compile Include="GameTop\UIElements\ClickableElement.cs" />
     <Compile Include="GameTop\UIElements\RenderableElement.cs" />
