Slider Element and Scrollbar

--- a/CrossPlatform/CrossPlatform/CrossPlatform.csproj
+++ b/CrossPlatform/CrossPlatform/CrossPlatform.csproj
@@ -65,6 +65,7 @@
     <Compile Include="GameTop\BattleLogic\BattlePuppet.cs" />
     <Compile Include="GameTop\Interfaces\IClickable.cs" />
     <Compile Include="GameTop\Interfaces\IHoverable.cs" />
+    <Compile Include="GameTop\Interfaces\IScrollable.cs" />
     <Compile Include="GameTop\PlayerInfo\PlayerInfo.cs" />
     <Compile Include="GameTop\Screens\ArmyScreen.cs" />
     <Compile Include="GameTop\Screens\BattleScreen.cs" />
@@ -81,6 +82,8 @@
     <Compile Include="GameTop\Tiles\UnitSelectorTile.cs" />
     <Compile Include="GameTop\Tiles\SquadFormationTile.cs" />
     <Compile Include="GameTop\UIElements\Button.cs" />
+    <Compile Include="GameTop\UIElements\SliderElement.cs" />
+    <Compile Include="GameTop\UIElements\ScrollableElement.cs" />
     <Compile Include="GameTop\UIElements\ClickableElement.cs" />
     <Compile Include="GameTop\UIElements\RenderableElement.cs" />
     <Compile Include="GameTop\UIElements\TextElement.cs" />
