--- a/CrossPlatform/CrossPlatform/GenericStragegyGame.csproj
+++ b/CrossPlatform/CrossPlatform/GenericStragegyGame.csproj
@@ -10,7 +10,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CrossPlatform</RootNamespace>
-    <AssemblyName>CrossPlatform</AssemblyName>
+    <AssemblyName>Generic Strategy Game</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -53,11 +53,13 @@
   <PropertyGroup>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup />
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Game1.cs" />
+    <Compile Include="GameTop\BattleLogic\BattlePuppetSquad.cs" />
+    <Compile Include="GenericStrategyGame.cs" />
     <Compile Include="GameTop\ArmyInfo\Army.cs" />
     <Compile Include="GameTop\ArmyInfo\Unit.cs" />
     <Compile Include="GameTop\ArmyInfo\Squad.cs" />
@@ -81,15 +83,15 @@
     <Compile Include="GameTop\Interfaces\IRenderable.cs" />
     <Compile Include="GameTop\Screens\Screen.cs" />
     <Compile Include="GameTop\ScreenController.cs" />
-    <Compile Include="GameTop\Tiles\BattleScreeen\BattleTile.cs" />
-    <Compile Include="GameTop\Tiles\BattleScreeen\BattleInfoTile.cs" />
-    <Compile Include="GameTop\Tiles\MapScreen\ArmyInfoTile.cs" />
-    <Compile Include="GameTop\Tiles\MapScreen\MapTile.cs" />
-    <Compile Include="GameTop\Tiles\MapScreen\CityInfoTile.cs" />
-    <Compile Include="GameTop\Tiles\FormationScreen\SelectedUnitTile.cs" />
-    <Compile Include="GameTop\Tiles\FormationScreen\SelectedSquadTile.cs" />
-    <Compile Include="GameTop\Tiles\FormationScreen\UnitSelectorTile.cs" />
-    <Compile Include="GameTop\Tiles\FormationScreen\SquadFormationTile.cs" />
+    <Compile Include="GameTop\Screens\Tiles\BattleScreeen\BattleTile.cs" />
+    <Compile Include="GameTop\Screens\Tiles\BattleScreeen\BattleInfoTile.cs" />
+    <Compile Include="GameTop\Screens\Tiles\MapScreen\ArmyInfoTile.cs" />
+    <Compile Include="GameTop\Screens\Tiles\MapScreen\MapTile.cs" />
+    <Compile Include="GameTop\Screens\Tiles\MapScreen\CityInfoTile.cs" />
+    <Compile Include="GameTop\Screens\Tiles\FormationScreen\SelectedUnitTile.cs" />
+    <Compile Include="GameTop\Screens\Tiles\FormationScreen\SelectedSquadTile.cs" />
+    <Compile Include="GameTop\Screens\Tiles\FormationScreen\UnitSelectorTile.cs" />
+    <Compile Include="GameTop\Screens\Tiles\FormationScreen\SquadFormationTile.cs" />
     <Compile Include="GameTop\UIElements\Button.cs" />
     <Compile Include="GameTop\UIElements\DraggableElement.cs" />
     <Compile Include="GameTop\UIElements\SliderElement.cs" />
@@ -166,6 +168,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="knight_dude.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
